# esp32_ttgo_t_display_lvgl

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake  config.env  flash_app_args  flash_args  flasher_args.json  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  ldgen_libraries.in  project_description.json
LVGL_Project/: Temperature_Display.sll  Temperature_Display.spj
LVGL_Project/assets/: ui_font_SevenSeg32.fcfg  ui_font_SevenSeg48.fcfg
bootloader-prefix/tmp/: bootloader-cfgcmd.txt  bootloader-mkdirs.cmake
components/lvgl_ui/: CMakeLists.txt
components/lvgl_ui/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
components/lvgl_ui/ui/components/: ui_comp_hook.c
components/lvgl_ui/ui/fonts/: ui_font_SevenSeg32.c  ui_font_SevenSeg48.c
components/lvgl_ui/ui/images/: ui_img_317087190.c  ui_img_squareline_logo_128_png.c
components/lvgl_ui/ui/screens/: ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen2.h
config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
esp-idf/: cmake_install.cmake
esp-idf/app_trace/: cmake_install.cmake
esp-idf/app_update/: cmake_install.cmake
esp-idf/bootloader/: cmake_install.cmake
esp-idf/bootloader_support/: cmake_install.cmake
esp-idf/bt/: cmake_install.cmake
esp-idf/cmock/: cmake_install.cmake
esp-idf/console/: cmake_install.cmake
esp-idf/cxx/: cmake_install.cmake
esp-idf/driver/: cmake_install.cmake
esp-idf/efuse/: cmake_install.cmake
gdbinit/: gdbinit  symbols
main/: CMakeLists.txt  idf_component.yml  image.c  main.c
(+105 files in other folders)
