idf_component_register(SRCS ui/screens/ui_Screen1.c
                            ui/ui.c
                            ui/components/ui_comp_hook.c
                            ui/ui_helpers.c
                            ui/images/ui_img_squareline_logo_128_png.c
                            INCLUDE_DIRS "ui" REQUIRES lvgl)