idf_component_register(SRCS ui/screens/ui_Screen1.c
                            ui/screens/ui_Screen2.c
                            ui/ui.c
                            ui/components/ui_comp_hook.c
                            ui/ui_helpers.c
                            ui/images/ui_img_317087190.c
                            ui/fonts/ui_font_SevenSeg32.c
                            ui/fonts/ui_font_SevenSeg48.c
                            INCLUDE_DIRS "ui" REQUIRES lvgl)